added auth token to openapi yaml
